deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: atw-dashboard
  labels:
    app.kubernetes.io/name: atw-dashboard
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: atw-dashboard
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
